--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CNN C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(CNN main.c cnn.c cnn_test.c cnn_test.h cnn_test_networks.c)
+add_executable(CNN main.c cnn.c cnn_test.c cnn_test.h cnn_test_networks.c mtcnn.c mtcnn_test.c)
